--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="main.css">
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -11,7 +13,7 @@
         font-size: 80px;
       }
       p {
-        color:rgb(70, 70, 70);
+        color:rgb(77, 82, 75);
         font-size: large;
       }
 
@@ -30,7 +32,11 @@
         align-items: center;
       }
       .header {
-        color:white;
+        display:flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+      
       }
     </style>
   </head>
@@ -43,7 +49,36 @@
  </div>
   
 
-<h2><span class="center">To help you reduce your carbon footprint in 3 easy steps!</span></h2>
+<h2><span class="center">We can help you reduce your carbon footprint in 3 easy steps!</span></h2>
+<br>
+
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+.button {
+
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.button {background-color: #4CAF50;} /* Green */
+</style>
+</head>
+<body>
+
+<span class="center"><button class="button button1"><a href= "home.html">Show me how!</a></button></span>
+
+</body>
+</html>
+
 <br>
 
 <span class="center"><p><strong>1. Take the quiz!</strong></p></span>
