--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <link rel="stylesheet" href="main.css">
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -13,7 +12,7 @@
         font-size: 80px;
       }
       p {
-        color:rgb(77, 82, 75);
+        color:rgb(70, 70, 70);
         font-size: large;
       }
 
@@ -32,7 +31,10 @@
         align-items: center;
       }
       .header {
-        color:white;
+        display:flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
       }
     </style>
   </head>
@@ -44,7 +46,6 @@
   <h1><span class="center"><strong>CarbonBuddy</strong></span></h1>
  </div>
   
-
 <h2><span class="center">We can help you reduce your carbon footprint in 3 easy steps!</span></h2>
 <br>
 
