--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </head>
 <body>
 
-<span class="center"><button class="button button1"><a href= "home.html">Show me how!</a></button></span>
+  <span class="center"><a href= "home.html"> <button class="button button1">Show me how!</button></a></span>
 
 </body>
 </html>
@@ -83,6 +83,7 @@
 <span class="center"><p><strong>3. Listen to the suggestions!</strong></p></span>
 <br>
 <br>
+
 <span class="center"><img src="co2.png" alt="Co2 Logo"></span>
 <br>
 <span class="center"><h1>Information</h1></span>
