fix font in button

--- a/home.html
+++ b/home.html
@@ -1,2 +1,13 @@
-<h1>Nothing here just yet...</h1>
-<a href= "index.html">Go back to main page! </a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      body {
+        font-family: 'Courier New', monospace;
+        background-color: rgb(222, 255, 225);
+      }</style>
+  </head>
+<body>
+
+<h1>Nothing here yet!</h1>
+<a href= "index.html">Go back to home!</a>
