--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <style>
-      body {
+      .button, body {
         font-family: 'Courier New', monospace;
         background-color: rgb(222, 255, 225);
       }
