--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <style>
-      .button, body {
+      body {
         font-family: 'Courier New', monospace;
         background-color: rgb(222, 255, 225);
       }
@@ -71,7 +71,7 @@
 </head>
 <body>
 
-  <span class="center"><a href= "home.html"> <button class="button button1">Show me how!</button></a></span>
+  <span class="center"><a href= "https://forms.gle/FBBDD3oN4FgJkhQH7"> <button class="button button1">Show me how!</button></a></span>
 
 </body>
 </html>
